--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,12 @@
 <!-- Create your form here -->
+<h3> Student Form </h3>
+
+<%= form_tag students_path do %>
+    <label>Student First Name:</label><br>
+    <%= text_field_tag :first_name, @student.first_name %><br>
+   
+    <label>Student Last Name:</label><br>
+    <%= text_field_tag :last_name, @student.last_name %><br>
+   
+    <%= submit_tag "Submit Student" %>
+  <% end %>
