--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,25 @@
 <!-- Create your form here -->
+<h1>Student Form</h1>
+<%#<%= form_for @student do |f| %>
+    <%#<%= f.label :first_name %>
+    <%#<%= f.text_field :first_name %>
+
+    <%#<%= f.label :last_name %>
+    <%#<%= f.text_field :last_name %>
+
+    <%#<%= f.submit %>
+
+<%#<% end %>
+
+<%= form_tag students_path do %>
+  <label>First Name:</label><br>
+  <%= text_field_tag :first_name %><br>
+
+  <label>Last Name:</label><br>
+  <%= text_field_tag :last_name %><br>
+
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+
+  <%= submit_tag "Submit Student" %>
+<% end %>
+
